Practical 3 Login activity

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schema.android.com/apk/res/res-auto"
-        android:id="@+id/navigation"
+        android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="79dp"
         android:layout_marginTop="650"
@@ -36,175 +36,176 @@
             android:layout_marginBottom="100dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <ImageView
-                android:id="@+id/img_guni"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginTop="64dp"
-                android:layout_marginBottom="265dp"
-                android:src="@drawable/guni_pink_logo"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@id/toolbar"
-                app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/img_guni"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginBottom="265dp"
+            android:src="@drawable/guni_pink_logo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@id/toolbar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/matertalcardview"
-                android:layout_width="380dp"
-                android:layout_height="265dp"
-                android:elevation="5dp"
-                app:cardElevation="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/img_guni">
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/matertalcardview"
+            android:layout_width="380dp"
+            android:layout_height="265dp"
+            android:elevation="5dp"
+            app:cardElevation="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/img_guni">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/constraintLayout2"
-                    android:layout_width="match_parent"
-                    android:layout_height="196dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/img_guni">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="196dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_guni">
 
 
-                    <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/matertalcardview"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:elevation="5dp"
-                        app:cardElevation="10dp"
-                        app:flow_horizontalBias="1.0"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/logoimg"
-                        app:layout_constraintVertical_bias="1.0">
+        <!--                    <com.google.android.material.card.MaterialCardView-->
+        <!--                        android:id="@+id/mcv1"-->
+        <!--                        android:layout_width="match_parent"-->
+        <!--                        android:layout_height="200dp"-->
+        <!--                        android:layout_marginStart="10dp"-->
+        <!--                        android:layout_marginEnd="10dp"-->
+        <!--                        android:elevation="5dp"-->
+        <!--                        app:cardElevation="10dp"-->
+        <!--                        app:flow_horizontalBias="1.0"-->
+        <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--                        app:layout_constraintEnd_toEndOf="parent"-->
+        <!--                        app:layout_constraintHorizontal_bias="1.0"-->
+        <!--                        app:layout_constraintStart_toStartOf="parent"-->
+        <!--                        app:layout_constraintTop_toBottomOf="@id/logoimg"-->
+        <!--                        app:layout_constraintVertical_bias="1.0">-->
 
-                        <RelativeLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
-                            <com.google.android.material.textfield.TextInputLayout
-                                android:id="@+id/email"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="10dp"
-                                android:hint="Email"
-                                app:endIconDrawable="@drawable/ic_baseline_email_24"
-                                app:endIconMode="custom"
-                                app:endIconTint="@color/pink">
-
-                                <com.google.android.material.textfield.TextInputEditText
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:inputType="textEmailAddress" />
-
-                            </com.google.android.material.textfield.TextInputLayout>
-
-                            <com.google.android.material.textfield.TextInputLayout
-
-                                android:layout_width="match_parent"
-                                android:layout_below="@+id/email"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="10dp"
-
-                                android:hint="Password"
-                                app:endIconDrawable="@drawable/ic_baseline_vpn_key_24"
-                                app:endIconMode="custom"
-                                app:endIconTint="@color/pink">
-
-                                <com.google.android.material.textfield.TextInputEditText
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:inputType="textPassword"
-                                    />
-
-                                <androidx.core.widget.NestedScrollView
-
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-                                    <androidx.constraintlayout.widget.ConstraintLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-                                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                                </androidx.core.widget.NestedScrollView>
-
-                            </com.google.android.material.textfield.TextInputLayout>
-                        </RelativeLayout>
-                    </com.google.android.material.card.MaterialCardView>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <TextView
-                    android:id="@+id/acc"
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="180"
-                    android:layout_marginTop="200dp"
-                    android:text="Forgot Password?"
-                    android:textSize="20dp" />
+                    android:layout_height="wrap_content">
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:hint="Email"
+                        app:endIconDrawable="@drawable/ic_baseline_email_24"
+                        app:endIconMode="custom"
+                        app:endIconTint="@color/pink">
 
-            </com.google.android.material.card.MaterialCardView>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="textEmailAddress" />
 
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_below="@+id/email"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:hint="Password"
+                        app:endIconDrawable="@drawable/ic_baseline_vpn_key_24"
+                        app:endIconMode="custom"
+                        app:endIconTint="@color/pink">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="textPassword"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <TextView
+                        android:id="@+id/fp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="180"
+                        android:layout_marginTop="170dp"
+                        android:text="Forgot Password?"
+                        android:textSize="20dp" />
+                </RelativeLayout>
+
+        <!--                                <androidx.core.widget.NestedScrollView-->
+
+        <!--                                    android:layout_width="match_parent"-->
+        <!--                                    android:layout_height="match_parent"-->
+        <!--                                    app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+
+        <!--                                    <androidx.constraintlayout.widget.ConstraintLayout-->
+        <!--                                        android:layout_width="match_parent"-->
+        <!--                                        android:layout_height="wrap_content"-->
+        <!--                                        app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+
+        <!--                                    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.core.widget.NestedScrollView>
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:layout_anchor="@+id/appBarLayout"
-        app:layout_anchorGravity="bottom|center"
-        app:layout_scrollFlags="scroll|enterAlways|snap" />
+
+
+<!--    </com.google.android.material.card.MaterialCardView>-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--    </androidx.core.widget.NestedScrollView>-->
+
+<com.google.android.material.appbar.MaterialToolbar
+android:id="@+id/toolbar"
+android:layout_width="match_parent"
+android:layout_height="?attr/actionBarSize"
+app:layout_anchor="@+id/appBarLayout"
+app:layout_anchorGravity="bottom|center"
+app:layout_scrollFlags="scroll|enterAlways|snap" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="130"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
-        android:layout_marginLeft="140dp"
-        android:padding="10dp"
-        android:text="Login"
-        android:textSize="17"
-        app:layout_anchor="@+id/nestedScrollView3"
-        app:layout_anchorGravity="center" />
+    android:id="@+id/button"
+    android:layout_width="130"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="400dp"
+    android:layout_marginLeft="140dp"
+    android:padding="10dp"
+    android:text="Login"
+    android:textSize="17"
+    app:layout_anchor="@+id/nestedScrollView3"
+    app:layout_anchorGravity="center" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Don't have an account?"
-        android:textSize="20dp"
-        android:id="@+id/acc"
-        android:layout_marginTop="500dp"
-        android:layout_marginLeft="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Don't have an account?"
+    android:textSize="20dp"
+    android:id="@+id/dacc"
+    android:layout_marginTop="500dp"
+    android:layout_marginLeft="20dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SIGN UP"
-        android:textSize="20dp"
-        android:id="@+id/acc"
-        android:textStyle="bold"
-        android:textColor="#DB3D91"
-        android:layout_marginTop="500dp"
-        android:layout_marginLeft="250dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="SIGN UP"
+    android:textSize="20dp"
+    android:id="@+id/signup"
+    android:textStyle="bold"
+    android:textColor="#DB3D91"
+    android:layout_marginTop="500dp"
+    android:layout_marginLeft="250dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
