--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -48,6 +48,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:elevation="20dp"
                     android:orientation="vertical">
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -157,6 +158,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:elevation="20dp"
                 android:layout_marginTop="20dp"
                 android:orientation="horizontal">
 
@@ -182,23 +184,24 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </LinearLayout>
-
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-90dp"
+                android:layout_gravity="center"
+                android:elevation="25dp" >
             <Button
+                android:id="@+id/button_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:textSize="17dp"
-                android:elevation="50dp"
-                android:layout_marginTop="-95dp"
-                app:layout_anchor="@id/mcv"
+                android:textSize="19sp"
                 android:text="Register"
                 android:orientation="horizontal"/>
-
+                </LinearLayout>
         </LinearLayout>
 
-
     </androidx.core.widget.NestedScrollView>
-
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomnavigationview"
